Move from StandardJS to GNOME eslint configs

--- a/package.json
+++ b/package.json
@@ -3,13 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "license": "GPL-2.0-or-later",
-  "standard": {
-    "globals": [
-      "imports",
-      "log"
-    ]
-  },
   "devDependencies": {
-    "standard": "^14.3.4"
+    "eslint": "^7.5.0"
   }
 }
