--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "hidecursor",
   "version": "0.0.0",
   "description": "",
+  "scripts": {
+    "test": "eslint *.js"
+  },
   "license": "GPL-2.0-or-later",
   "devDependencies": {
     "eslint": "^7.5.0"
